tests/specs/permission/allow_import_not_on_redirect/main.out
error: Requires import access to "localhost:4545", run again with the --allow-import flag
    at file:///[WILDLINE]/main.js:1:23
