tests/specs/permission/allow_import_not_on_redirect/main.js
import { value } from "http://localhost:4547/redirects/redirect3.js";
console.log(value);
